DIST_SUBDIRS =		\
	docinfo			\
	externaltools	\
	filebrowser		\
	pythonconsole	\
	taglist			\
	time			\
	trailsave		\
	sort			\
	spell			\
	quickopen

SUBDIRS = 			\
	docinfo			\
	externaltools	\
	filebrowser		\
	pythonconsole	\
	taglist			\
	time			\
	trailsave		\
	sort			\
	spell			\
	quickopen

-include $(top_srcdir)/git.mk
