DIST_SUBDIRS =		\
	docinfo			\
	externaltools	\
	filebrowser		\
	pythonconsole	\
	taglist			\
	time			\
	trailsave		\
	snippets		\
	sort			\
	spell			\
	quickopen

SUBDIRS = 			\
	docinfo			\
	externaltools	\
	filebrowser		\
	pythonconsole	\
	taglist			\
	time			\
	trailsave		\
	snippets		\
	sort			\
	spell			\
	quickopen

-include $(top_srcdir)/git.mk
