DIST_SUBDIRS =		\
	docinfo			\
	externaltools	\
	filebrowser		\
	modelines		\
	pythonconsole	\
	taglist			\
	time			\
	trailsave		\
	snippets		\
	sort			\
	spell			\
	quickopen

SUBDIRS = 			\
	docinfo			\
	externaltools	\
	filebrowser		\
	modelines		\
	pythonconsole	\
	taglist			\
	time			\
	trailsave		\
	snippets		\
	sort			\
	spell			\
	quickopen

-include $(top_srcdir)/git.mk
